# skripsie_2021

./: .gitignore  README.md  dists.csv
common_tools/: __init__.py  common_tools.py
cube_gen/: __init__.py  cube_gen.py  cube_gen_test.py  cube_gen_test_2d.py  dists_test.csv  dists_test_10_perc_noise.csv  dists_test_25.csv  dists_test_2d.csv  dists_test_2d_49.csv  dists_test_2d_full.csv  dists_test_36.csv  dists_test_90.csv  dists_test_full.csv  noise_test.py
cube_gen/Data/: dists.csv  dists_full.csv  dists_test_2d.csv  dists_test_33.csv  dists_test_40.csv  dists_test_45.csv  obs.csv  point_coords.csv
cube_gen/old_src/: cube_gen_old.py  cube_gen_test_2d.py
gaussian_test/: CMakeLists.txt
gaussian_test/cmake/Modules/: FetchContentHelpers.cmake  Findemdw.cmake  FindgLinear.cmake  Findprlite.cmake  ShowCmakeVariables.cmake
gaussian_test/src/: CMakeLists.txt  gaussian_test.cc
reconstruct_performance_analysis/: heuristic_identification.py  parallel_test.py  performance_analysis.py  performance_analysis_i_e.py  performance_analysis_i_n.py
reconstruct_pgm/: CMakeLists.txt  __init__.py  dists_inter_5_noise_0%.csv  dists_inter_5_noise_10%.csv  dists_inter_97_noise_0%.csv  obs.csv  reconstruct_pgm.py  result.csv
reconstruct_pgm/Data/: 3_d_init.csv  dists1.csv  dists_inter_5_noise_1%.csv  dists_inter_97_noise_10%.csv  estpos.csv  init_pos_std_10.csv  init_pos_std_50.csv  init_pos_var_100.csv  init_pos_var_200.csv  initpos10.csv  obs.csv  result.csv  result0.csv  result1.csv  result2.csv  result3.csv  working_dists.csv  working_dists0.csv  working_dists1.csv  working_dists2.csv  working_dists3.csv  working_init_pos.csv  working_init_pos0.csv  working_init_pos1.csv  working_init_pos2.csv  working_init_pos3.csv
reconstruct_pgm/Figures/: bayes_pgm.drawio  cluster_ex.drawio  cluster_ex_cluster.drawio  cluster_ex_junction.drawio  markov_pgm.drawio  pgm_init_step.drawio  pgm_iter_step.drawio  pgm_sigma_step.drawio  prob_flow.drawio
reconstruct_pgm/src/: CMakeLists.txt  reconstruct_pgm.cc  reconstruct_pgm_old.cc
reconstruct_pgm/wip_src/: inferpos.cc  iomaps.cc  iomaps.hpp
reconstruct_pgm_perf_analysis/: display_comp.py  display_heuristic_test.py  display_i_init_std.py  display_test_init_rand.py  display_test_init_std.py  heuristic_identification.py  performance_analysis_i_e.py  performance_analysis_i_initStd.py  performance_analysis_i_n.py
reconstruct_pgm_perf_analysis/Data/: z_inter_1_26_init_std_1_202_1%n_1%e_rel_1.mat  z_inter_1_26_init_std_1_202_1%n_5%e_rel_1.mat  z_inter_1_26_init_std_1_202_1%n_rel_1.mat  z_inter_1_26_init_std_1_202_10%n_rel_1.mat  z_inter_1_26_init_std_1_202_20%n_rel_1.mat  z_inter_1_26_init_std_1_202_5%n_rel_1.mat  z_inter_1_26_init_std_1_202_5%n_rel_2.mat  z_inter_1_62_4_init_rand_100_1%n_0%e_edm_rel_1.mat  z_inter_1_62_4_init_rand_100_1%n_0%e_edm_rel_2  z_inter_1_62_4_init_rand_100_20%n_0%e_edm_rel_1.mat  z_inter_1_62_4_init_rand_100_5%n_1%e_edm_rel_1  z_inter_1_62_4_init_rand_100_5%n_1%e_edm_rel_2  z_inter_1_62_4_init_rand_100_noi_1_101_4_edm_rel_1  z_inter_1_62_4_init_std_100_5%n_1%e_edm_rel_1  z_inter_1_62_4_init_std_100_5%n_1%e_edm_rel_2  z_inter_1_62_4_init_std_100_err_1_101_4_edm_rel_1  z_inter_1_62_4_init_std_100_noi_1_101_4_edm_rel_1  z_inter_1_62_4_init_std_1_202_10_1%n_0%e_edm_rel_1.mat  z_inter_1_62_4_init_std_1_202_10_20%n_0%e_edm_rel_1.mat  z_inter_1_62_4_init_std_200_5%n_1%e_edm_rel_1  z_inter_1_62_4_init_std_200_5%n_1%e_edm_rel_2  z_inter_1_62_4_init_std_50_5%n_1%e_edm_rel_1  z_inter_1_62_4_init_std_50_5%n_1%e_edm_rel_2  z_inter_1_62_4_init_std_50_5%n_1%e_edm_rel_3  z_inter_1_62_4_init_std_50_5%n_1%e_edm_rel_4  z_inter_1_62_4_noi_1_err_10_edm_rel_1.mat  z_inter_1_62_4_noi_1_err_10_edm_rel_2.mat  z_inter_1_62_4_noi_1_err_10_rem_full_edm_rel_1.mat  z_inter_1_62_4_noi_1_err_10_rem_full_edm_rel_2.mat  z_inter_1_62_4_noi_1_err_10_rem_half_edm_rel_1.mat  z_inter_1_62_4_noi_1_err_10_rem_half_edm_rel_2.mat  z_inter_1_62_4_noi_1_err_10_rem_quar_edm_rel_1.mat  z_inter_1_62_4_noi_1_err_10_rem_quar_edm_rel_2.mat  z_inter_1_62_4_noi_20_err_10_edm_rel_1.mat  z_inter_1_62_4_noi_20_err_10_edm_rel_2.mat  z_inter_1_62_4_noi_20_err_10_rem_full_edm_rel_1.mat  z_inter_1_62_4_noi_20_err_10_rem_full_edm_rel_2.mat  z_inter_1_62_4_noi_20_err_10_rem_half_edm_rel_1.mat  z_inter_1_62_4_noi_20_err_10_rem_half_edm_rel_2.mat  z_inter_1_62_4_noi_20_err_10_rem_quar_edm_rel_1.mat  (+2 more)
reconstruct_script/: __init__.py  reconstruct.py  reconstruct_script.py  semidefiniteRelaxation.m  wip_reconstruct.py
reconstruct_script/Connectors/: matlab_connector.m  matlab_connector0.m  matlab_connector1.m  (+2 more)
reconstruct_script_perf_analysis/: display_heuristic_test.py  display_test.py  heuristic_identification.py  performance_analysis_i_e.py  performance_analysis_i_n.py  performance_analysis_lambda.py  reconstruct_gif.py
sigma_test/: CMakeLists.txt  sigma_test.py  sigma_test_1D.py
(+44 files in other folders)
